@@ -19,6 +19,8 @@ debhelper (10.7) UNRELEASED; urgency=medium
     trivial operations in the child process (e.g. redirect stdout).
   * dh_installman: Avoid forking a shell where a simple subprocess call
     is sufficient.
+  * Dh_Lib: Avoid forking 2 to 7 subprocesses for adding an autosnippet
+    when helper tools use a subroutine rather then a sed snippet.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 15 Jul 2017 09:42:32 +0000
 
